отработал ховеры и фокусы

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -12,29 +12,23 @@
 .address{
   color: var(--third-text-color);
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-contact{
-}
-.address:hover,
-.address:focus{
+
+  &:hover,
+  &:focus
   color: var(--accent-color);
 }
+
 .contact{
   color: rgba(255, 255, 255, 0.6);
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus
+    color: var(--accent-color);
 }
-.contact:hover,
-.contact:focus{
-  color: var(--accent-color);
-}
-.footer-logo{
-  margin-bottom: 20px; 
-}
-.logo-footer-studio{
-  color:var(--primary-title-color);
-}
+
 .footer-item,
-.footer-link:not(:last-child){
+  &:not(:last-child){
   margin-bottom: 9px;
 }
 .footer-section{
@@ -48,12 +42,16 @@
 .footer-section-item:last-child{
   margin-left: auto;
   }
-.section-common-list{
+
+  .section-common-list{
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  margin-left: -10px;
+  margin-top: -30px;
 }
+
 .section-common-title{
   font-weight: 700;
   font-size: 14px;
@@ -62,14 +60,7 @@
   color: var(--primary-title-color);
   margin-bottom: 20px;
 }
-.section-common-list{
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  margin-left: -10px;
-  margin-top: -30px;
-}
+
 .section-common-item{
   width: 44px;
   height: 44px;
@@ -90,11 +81,12 @@
   align-items: center;
   justify-content: center;
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus
+    background-color: var(--accent-color);
 }  
-.section-common-link:hover,
-.section-common-link:focus{
-  background-color: var(--accent-color);
-}
+
 .section-common-pkt{
   fill: var(--primary-title-color);
   width: 20px;
@@ -129,11 +121,12 @@ position: relative;
   align-items: center;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);  
-}
-.footer-mailing-box:hover,
-.footer-mailing-box:focus{
+
+  &:hover,
+  &:focus
   border: 1px solid var(--accent-color);
 }
+
 .footer-mailing-btn{
   width: 200px;
   height: 50px;
@@ -150,9 +143,8 @@ position: relative;
   transform: translateY(-50%);
   position: absolute;
   transition: transform 2250ms cubic-bezier(0.4, 0, 0.2, 1)
-}
 
-.footer-mailing-icon:hover,
-.footer-mailing-icon:focus{
-  transform: rotate(25deg) translateX(-45%);/*Шютка*/
+    &:hover,
+    &:focus
+    transform: rotate(25deg) translateX(-45%);/*Шютка*/
 }
