--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import './components/section';
 @import './components/btn';
 @import './components/logo';
+@import './components/close-btn';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/whyus';
