--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -4,10 +4,24 @@
   font-size: 26px;
   line-height: calc(31 / 26);
   color: var(--accent-color);
-  display: block;
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus
+  color: var(--accent-color)
 }
-.logo:hover,
-.logo:focus{
-  color: var(--accent-color);
+
+.logo-flex{
+  margin-right: 93px;
+}
+.logo-header-studio{
+  color: var(--secondary-text-color);
+}
+
+.footer-logo{
+  display: block;
+  margin-bottom: 20px; 
+}
+.logo-footer-studio{
+  color:var(--primary-title-color);
 }
