--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -14,9 +14,9 @@
   fill: var(--clients-color); 
   transition: border 240ms cubic-bezier(0.4, 0, 0.2, 1), 
               fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.clients-link:hover,
-.clients-link:focus{
+
+  &:hover,
+  &:focus
   border: 1px solid var(--hero-button);
   fill: var(--hero-button);
 }
