--- a/sass/layout/_filtr.scss
+++ b/sass/layout/_filtr.scss
@@ -13,10 +13,10 @@
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), 
               background-color 240ms cubic-bezier(0.4, 0, 0.2, 1), 
               box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.filtr-btn:hover,
-.filtr-btn:focus,
-.carrent-btn{
+
+  &:hover,
+  &:focus,
+  .carrent-btn
   color: var(--third-text-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
