--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -32,9 +32,9 @@
   background-color: var(--accent-color);
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), 
               background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.hero-btn:hover,
-.hero-btn:focus {
+
+    &:hover,
+    &:focus 
   color: var(--third-text-color);
   background-color: var(--hero-button);
 }
