--- a/sass/layout/_ourteam.scss
+++ b/sass/layout/_ourteam.scss
@@ -28,8 +28,6 @@
   justify-content: center;
   align-items: center;
 }
-.ourteam-socital-item{
-}
 .ourteam-socital-item +.ourteam-socital-item{
   margin-left: 10px;
 }
@@ -43,18 +41,18 @@
   align-items: center;
   justify-content: center;
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus
+  background-color: var(--accent-color);
 }
 .socital-link-pkt{
 fill: var(--clients-color);
 width: 20px;
 height: 20px;
 transition: fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.ourteam-socital-link:hover,
-.ourteam-socital-link:focus{
-  background-color: var(--accent-color);
-}
-.ourteam-socital-link:hover .socital-link-pkt,
-.ourteam-socital-link:focus .socital-link-pkt{
+
+.ourteam-socital-link:hover &,
+.ourteam-socital-link:focus &
   fill: var(--primary-title-color);
 }
