--- a/sass/layout/_portofolio.scss
+++ b/sass/layout/_portofolio.scss
@@ -13,9 +13,9 @@
 }
 .portofolio-link{
   transition: box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portofolio-link:hover,
-.portofolio-link:focus{
+
+    &:hover,
+    &:focus
   display: block;
   outline: none;
   box-shadow:     
@@ -23,10 +23,7 @@
     0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.portofolio-link:hover .porofolio-top-text,
-.portofolio-link:focus .porofolio-top-text{
-transform: translateY(0);
-}
+
 .portofolio-item-title{
   font-weight: 700;
   font-size: 18px;
@@ -66,4 +63,9 @@ overflow:hidden;
   padding: 63px 24px;
   transform: translateY(100%);
   transition: transform 240ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .portofolio-link:hover &,
+    .portofolio-link:focus &
+transform: translateY(0);
 }
+
