--- a/sass/layout/_portofolio.scss
+++ b/sass/layout/_portofolio.scss
@@ -15,13 +15,13 @@
   transition: box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
-    &:focus
+    &:focus{
   display: block;
   outline: none;
   box-shadow:     
     0px 1px 1px rgba(0, 0, 0, 0.12),
     0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+    1px 4px 6px rgba(0, 0, 0, 0.16);}
 }
 
 .portofolio-item-title{
@@ -65,7 +65,6 @@ overflow:hidden;
   transition: transform 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
     .portofolio-link:hover &,
-    .portofolio-link:focus &
-transform: translateY(0);
+    .portofolio-link:focus &{
+      transform: translateY(0);}
 }
-
