--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -8,3 +8,13 @@ ul{
 img{
   display: block;
 }
+button{
+border-width: 0;
+}
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
