--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -16,9 +16,9 @@
               fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus
+  &:focus{
   border: 1px solid var(--hero-button);
-  fill: var(--hero-button);
+  fill: var(--hero-button);}
 }
 .clients-icon{
   width: 106px;
