--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,3 @@
-.footer-link{
-  line-height: 1.71;  /* or 171% */
-}
 .footer{
   background: var(--futer-grount);
   padding-top: 60px;
@@ -11,24 +8,31 @@
 }
 .address{
   color: var(--third-text-color);
+  line-height: 1.71;  /* or 171% */
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus
-  color: var(--accent-color);
+  &:focus{
+  color: var(--accent-color);}
 }
 
 .contact{
   color: rgba(255, 255, 255, 0.6);
+  line-height: 1.71;  /* or 171% */
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus
-    color: var(--accent-color);
+  &:focus{
+    color: var(--accent-color);}
+}
+.logo_indent--bottom{
+  display: block;
+  margin-bottom: 20px; 
 }
 
 .footer-item,
-  &:not(:last-child){
+.footer-item:not(:last-child){
+  display: block;
   margin-bottom: 9px;
 }
 .footer-section{
@@ -43,7 +47,7 @@
   margin-left: auto;
   }
 
-  .section-common-list{
+.section-common-list{
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -83,8 +87,8 @@
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus
-    background-color: var(--accent-color);
+  &:focus{
+    background-color: var(--accent-color);}
 }  
 
 .section-common-pkt{
@@ -123,8 +127,8 @@ position: relative;
   color: rgba(255, 255, 255, 0.6);  
 
   &:hover,
-  &:focus
-  border: 1px solid var(--accent-color);
+  &:focus{
+  border: 1px solid var(--accent-color);}
 }
 
 .footer-mailing-btn{
@@ -142,9 +146,9 @@ position: relative;
   top: 50%;
   transform: translateY(-50%);
   position: absolute;
-  transition: transform 2250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: transform 2250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
-    &:focus
-    transform: rotate(25deg) translateX(-45%);/*Шютка*/
+    &:focus{
+    transform: rotate(25deg) translateX(-45%);}/*Шютка*/
 }
