--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,7 +7,9 @@
   display: flex;
   align-items: center;
 }
-
+.logo_indent--right{
+  margin-right: 93px;
+}
 .header-kontacts-flex{
   display: flex;
   margin-left: auto;
@@ -27,8 +29,8 @@
 
   &:hover,
   &:focus,
-  .current
-  color: var(--accent-color);
+  .current{
+  color: var(--accent-color);}
 }
 
 .current::after{
@@ -56,8 +58,8 @@
   transition: fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .header-link-item:hover &,
-.header-link-item:focus &
-  fill: var(--accent-color);  
+.header-link-item:focus &{
+  fill: var(--accent-color);}  
 }
 .header-link-item{
   display: flex;
@@ -69,6 +71,6 @@
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus
-  color: var(--accent-color);
+  &:focus{
+  color: var(--accent-color);}
 }
