--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -34,7 +34,7 @@
               background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
-    &:focus 
+    &:focus{ 
   color: var(--third-text-color);
-  background-color: var(--hero-button);
+  background-color: var(--hero-button);}
 }
