--- a/sass/layout/_ourteam.scss
+++ b/sass/layout/_ourteam.scss
@@ -43,8 +43,8 @@
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
-    &:focus
-  background-color: var(--accent-color);
+    &:focus{
+  background-color: var(--accent-color);}
 }
 .socital-link-pkt{
 fill: var(--clients-color);
@@ -53,6 +53,6 @@ height: 20px;
 transition: fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .ourteam-socital-link:hover &,
-.ourteam-socital-link:focus &
-  fill: var(--primary-title-color);
+.ourteam-socital-link:focus &{
+  fill: var(--primary-title-color);}
 }
