--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -11,6 +11,20 @@
   border-radius: 4px;
 }
 
+.btn_hero {
+  color: var(--third-text-color);
+  background-color: var(--accent-color);
+  transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), 
+              background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus{ 
+  color: var(--third-text-color);
+  background-color: var(--hero-button);}
+}
+
+
+
 /* кнопка фільтрів на сторінці "Портофоліо"*/
 .btn-filtr {
   font-family: inherit;
@@ -69,3 +83,5 @@
   width: 18px;
   height: 18px;
 }
+
+
