--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,18 +1,4 @@
-@import './utils/vars';
-@import './base/reset';
-@import './base/common';
-@import './utils/hidden';
-@import './components/container';
-@import './components/section';
-@import './components/btn';
-@import './components/logo';
-@import './layout/header';
-@import './layout/hero';
-@import './layout/whyus';
-@import './layout/wedoing';
-@import './layout/ourteam';
-@import './layout/clients';
-@import './layout/footer';
-@import './layout/filtr';
-@import './layout/portofolio';
-@import './layout/modal';
+@import './utils/!main';
+@import './base/!base';
+@import './components/!main';
+@import './layout/!main';
