--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+/* './utils/...';*/
 :root {
   --primary-title-color: #ffffff;
   --third-text-color: #ffffff;
@@ -17,6 +18,18 @@
   --clients-color: #AFB1B8;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+}
+
+/*'./base/...';*/
 p, h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
@@ -51,17 +64,7 @@ body {
   list-style: none;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  border: 0;
-  clip: rect(0, 0, 0, 0);
-}
-
+/*'./components/...';*/
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -85,6 +88,18 @@ body {
   letter-spacing: 0.06em;
   cursor: pointer;
   border-radius: 4px;
+}
+
+.btn_hero {
+  color: var(--third-text-color);
+  background-color: var(--accent-color);
+  -webkit-transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn_hero:hover, .btn_hero:focus {
+  color: var(--third-text-color);
+  background-color: var(--hero-button);
 }
 
 /* кнопка фільтрів на сторінці "Портофоліо"*/
@@ -180,6 +195,15 @@ body {
   color: var(--primary-title-color);
 }
 
+.title-h2 {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: calc(42 / 36);
+  text-align: center;
+  color: var(--secondary-title-color);
+}
+
+/*'./layout/...';*/
 .header {
   border-bottom: 1px solid var(--border-color);
 }
@@ -319,18 +343,6 @@ body {
   margin-bottom: 30px;
 }
 
-.hero-btn {
-  color: var(--third-text-color);
-  background-color: var(--accent-color);
-  -webkit-transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.hero-btn:hover, .hero-btn:focus {
-  color: var(--third-text-color);
-  background-color: var(--hero-button);
-}
-
 .whyus-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -399,14 +411,7 @@ body {
   padding-top: 0px;
 }
 
-.ourteam-title,
-.wedoing-title,
-.clients-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: calc(42 / 36);
-  text-align: center;
-  color: var(--secondary-title-color);
+.title-h2_indent--bottom {
   margin-bottom: 50px;
 }
 
@@ -590,7 +595,6 @@ body {
   margin-bottom: 20px;
 }
 
-.footer-item,
 .footer-item:not(:last-child) {
   display: block;
   margin-bottom: 9px;
@@ -607,15 +611,15 @@ body {
           align-items: baseline;
 }
 
-.footer-section-item:not(:last-child) {
+.footer-section_item:not(:last-child) {
   margin-right: 70px;
 }
 
-.footer-section-item:last-child {
+.footer-section_item:last-child {
   margin-left: auto;
 }
 
-.section-common-list {
+.section-common_list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -631,7 +635,7 @@ body {
   margin-top: -30px;
 }
 
-.section-common-title {
+.section-common_title {
   font-weight: 700;
   font-size: 14px;
   text-transform: uppercase;
@@ -640,7 +644,7 @@ body {
   margin-bottom: 20px;
 }
 
-.section-common-item {
+.section-common_item {
   width: 44px;
   height: 44px;
   -ms-flex-preferred-size: calc(100% / 4 - 10px);
@@ -649,11 +653,11 @@ body {
   margin-top: 30px;
 }
 
-.section-common-item + .section-common-item {
+.section-common_item + .section-common_item {
   margin-left: 10px;
 }
 
-.section-common-link {
+.section-common_link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -672,17 +676,17 @@ body {
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.section-common-link:hover, .section-common-link:focus {
+.section-common_link:hover, .section-common_link:focus {
   background-color: var(--accent-color);
 }
 
-.section-common-pkt {
+.section-common_pkt {
   fill: var(--primary-title-color);
   width: 20px;
   height: 20px;
 }
 
-.footer-mailing-title {
+.footer-mailing_title {
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
@@ -694,11 +698,11 @@ body {
   padding-bottom: 20px;
 }
 
-.footer-mailing-form {
+.footer-mailing_form {
   position: relative;
 }
 
-.footer-mailing-box {
+.footer-mailing_box {
   width: 358px;
   height: 50px;
   background-color: transparent;
@@ -718,11 +722,11 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-mailing-box:hover, .footer-mailing-box:focus {
+.footer-mailing_box:hover, .footer-mailing_box:focus {
   border: 1px solid var(--accent-color);
 }
 
-.footer-mailing-btn {
+.footer-mailing_btn {
   width: 200px;
   height: 50px;
   padding-left: 29px;
@@ -731,7 +735,7 @@ body {
   padding-bottom: 10px;
 }
 
-.footer-mailing-icon {
+.footer-mailing_icon {
   width: 24px;
   height: 24px;
   right: 28px;
@@ -746,7 +750,7 @@ body {
   /*Шютка*/
 }
 
-.footer-mailing-icon:hover, .footer-mailing-icon:focus {
+.footer-mailing_icon:hover, .footer-mailing_icon:focus {
   -webkit-transform: rotate(25deg) translateX(-45%);
           transform: rotate(25deg) translateX(-45%);
 }
