--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,6 @@ body {
 .btn_hero {
   color: var(--third-text-color);
   background-color: var(--accent-color);
-  -webkit-transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -118,10 +117,7 @@ body {
 .btn-filtr_color {
   color: var(--secondary-text-color);
   background: var(--filter-button-color);
-  -webkit-transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), background-color 240ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), background-color 240ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), background-color 240ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), background-color 240ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* не виконано крізь & бо не працює клас carent-btn*/
@@ -130,8 +126,7 @@ body {
 .carrent-btn {
   color: var(--third-text-color);
   background-color: var(--accent-color);
-  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* кнопка закриття модального вікна*/
@@ -141,25 +136,14 @@ body {
   top: 10px;
   width: 30px;
   height: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   cursor: pointer;
   fill: var(--secondary-title-color);
   border-radius: 50%;
   background: #00000000;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 0;
   /* змінює розміри "Х" на 18х18 з 16х18*/
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -179,7 +163,6 @@ body {
   font-size: 26px;
   line-height: calc(31 / 26);
   color: var(--accent-color);
-  -webkit-transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -203,20 +186,47 @@ body {
   color: var(--secondary-title-color);
 }
 
+.dis-fl--d, .whyus-container {
+  display: flex;
+}
+
+.dis-fl--da, .header-kontacts-flex, .header-link-item, .hero-container {
+  display: flex;
+  align-items: center;
+}
+
+.dis-fl--daj, .btn-close, .whyus-item-pkt, .ourteam-socital-list, .clients-link, .backdrop, .check-text, .check-text span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dis-fl--dw, .ourteam-list,
+.whyus-list,
+.wedoing-list,
+.clients-list, .footer-section, .portofolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.dis-fl--dwj, .filtr-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.dis-fl--dwaj, .section-common_list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
 /*'./layout/...';*/
 .header {
   border-bottom: 1px solid var(--border-color);
-}
-
-.header-container,
-.header-navigation,
-.header-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .logo_indent--right {
@@ -224,13 +234,7 @@ body {
 }
 
 .header-kontacts-flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin-left: auto;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .header-link {
@@ -242,7 +246,6 @@ body {
   letter-spacing: 0.02em;
   color: var(--secondary-title-color);
   position: relative;
-  -webkit-transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -278,7 +281,6 @@ body {
 .icon {
   margin-right: 10px;
   fill: var(--primary-text-color);
-  -webkit-transition: fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -288,17 +290,10 @@ body {
 }
 
 .header-link-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
-  -webkit-transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -308,7 +303,6 @@ body {
 
 .hero {
   background-color: var(--hero-bg);
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-jpeg.jpg);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-jpeg.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -318,16 +312,7 @@ body {
 }
 
 .hero-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
 }
 
 .hero-title {
@@ -343,21 +328,10 @@ body {
   margin-bottom: 30px;
 }
 
-.whyus-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 .ourteam-list,
 .whyus-list,
 .wedoing-list,
 .clients-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -30px;
 }
@@ -365,8 +339,7 @@ body {
 .wedoing-item,
 .ourteam-item,
 .whyus-item {
-  -ms-flex-preferred-size: calc(100% / 4 - 30px);
-      flex-basis: calc(100% / 4 - 30px);
+  flex-basis: calc(100% / 4 - 30px);
   margin-left: 30px;
   margin-top: 30px;
 }
@@ -375,15 +348,6 @@ body {
   height: 120px;
   background-color: var(--filter-button-color);
   border-radius: 4px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin-bottom: 30px;
 }
 
@@ -443,8 +407,7 @@ body {
 
 .ourteam-card {
   background: var(--background-card);
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   display: block;
   padding-bottom: 30px;
@@ -468,18 +431,6 @@ body {
   margin-bottom: 16px;
 }
 
-.ourteam-socital-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 .ourteam-socital-item + .ourteam-socital-item {
   margin-left: 10px;
 }
@@ -490,16 +441,9 @@ body {
   border-radius: 50%;
   display: block;
   background-color: var(--primary-title-color);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
+  align-items: center;
+  justify-content: center;
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -511,7 +455,6 @@ body {
   fill: var(--clients-color);
   width: 20px;
   height: 20px;
-  -webkit-transition: fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -521,28 +464,17 @@ body {
 }
 
 .clients-item {
-  -ms-flex-preferred-size: calc(100% / 6 - 30px);
-      flex-basis: calc(100% / 6 - 30px);
+  flex-basis: calc(100% / 6 - 30px);
   margin-left: 30px;
   margin-top: 30px;
 }
 
 .clients-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   width: 170px;
   height: 92px;
   border: 1px solid var(--clients-color);
   border-radius: 4px;
   fill: var(--clients-color);
-  -webkit-transition: border 240ms cubic-bezier(0.4, 0, 0.2, 1), fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 240ms cubic-bezier(0.4, 0, 0.2, 1), fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -570,7 +502,6 @@ body {
   color: var(--third-text-color);
   line-height: 1.71;
   /* or 171% */
-  -webkit-transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -582,7 +513,6 @@ body {
   color: rgba(255, 255, 255, 0.6);
   line-height: 1.71;
   /* or 171% */
-  -webkit-transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -601,14 +531,7 @@ body {
 }
 
 .footer-section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  align-items: baseline;
 }
 
 .footer-section_item:not(:last-child) {
@@ -620,17 +543,6 @@ body {
 }
 
 .section-common_list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin-left: -10px;
   margin-top: -30px;
 }
@@ -647,8 +559,7 @@ body {
 .section-common_item {
   width: 44px;
   height: 44px;
-  -ms-flex-preferred-size: calc(100% / 4 - 10px);
-      flex-basis: calc(100% / 4 - 10px);
+  flex-basis: calc(100% / 4 - 10px);
   margin-left: 10px;
   margin-top: 30px;
 }
@@ -663,16 +574,9 @@ body {
   border-radius: 50%;
   display: block;
   background-color: rgba(255, 255, 255, 0.1);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
+  align-items: center;
+  justify-content: center;
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -707,17 +611,14 @@ body {
   height: 50px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   margin-right: 12px;
   padding: 8px;
   font-family: inherit;
   font-size: 16px;
   line-height: 1.25;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
@@ -740,30 +641,17 @@ body {
   height: 24px;
   right: 28px;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   position: absolute;
-  -webkit-transition: -webkit-transform 2250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 2250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 2250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 2250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 2250ms cubic-bezier(0.4, 0, 0.2, 1);
   /*Шютка*/
 }
 
 .footer-mailing_icon:hover, .footer-mailing_icon:focus {
-  -webkit-transform: rotate(25deg) translateX(-45%);
-          transform: rotate(25deg) translateX(-45%);
+  transform: rotate(25deg) translateX(-45%);
 }
 
 .filtr-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin-bottom: 50px;
 }
 
@@ -772,36 +660,25 @@ body {
 }
 
 .portofolio-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -30px;
 }
 
 .portofolio-item {
-  -ms-flex-preferred-size: calc(100% / 3 - 30px);
-      flex-basis: calc(100% / 3 - 30px);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  flex-basis: calc(100% / 3 - 30px);
+  box-sizing: border-box;
   margin-left: 30px;
   margin-top: 30px;
 }
 
 .portofolio-link {
-  -webkit-transition: -webkit-box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portofolio-link:hover, .portofolio-link:focus {
   display: block;
   outline: none;
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portofolio-item-title {
@@ -827,8 +704,7 @@ body {
   padding-bottom: 20px;
   border: 1px solid var(--portofolio-card-border);
   border-top: 0px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .portofolio-top-wrappter {
@@ -848,18 +724,13 @@ body {
   left: 0px;
   height: 100%;
   padding: 63px 24px;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
-  -webkit-transition: -webkit-transform 240ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 240ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
   transition: transform 240ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 240ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portofolio-link:hover .porofolio-top-text,
 .portofolio-link:focus .porofolio-top-text {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  transform: translateY(0);
 }
 
 .backdrop {
@@ -868,16 +739,6 @@ body {
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
   top: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transition: opacity 240ms cubic-bezier(0.4, 0, 0.2, 1), visibility 240ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 240ms cubic-bezier(0.4, 0, 0.2, 1), visibility 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -887,28 +748,21 @@ body {
   pointer-events: none;
 }
 
-.backdrop.is-hidden
-.modal {
+.backdrop.is-hidden .modal {
   opacity: 0;
-  -webkit-transform: scale(0);
-          transform: scale(0);
+  transform: scale(0);
 }
 
 .modal {
   width: 528px;
   min-height: 581px;
   background-color: var(--primary-title-color);
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   position: relative;
   opacity: 1;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: scale(1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
 }
 
@@ -950,7 +804,6 @@ body {
   padding-right: 20px;
   outline: none;
   color: var(--primary-text-color);
-  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -970,9 +823,7 @@ body {
   position: absolute;
   left: 12px;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -981,27 +832,13 @@ body {
   height: 120px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   background-color: transparent;
   padding: 10px;
   resize: none;
   outline: none;
-  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--primary-text-color);
-}
-
-.modal-user-commit::-webkit-input-placeholder {
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.modal-user-commit:-ms-input-placeholder {
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.modal-user-commit::-ms-input-placeholder {
-  color: rgba(117, 117, 117, 0.5);
 }
 
 .modal-user-commit::placeholder {
@@ -1023,15 +860,6 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin-bottom: 30px;
 }
 
@@ -1041,16 +869,6 @@ body {
   border: 2px solid var(--futer-grount);
   border-radius: 3px;
   margin-right: 8px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
