--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -35,8 +35,7 @@
   margin-bottom: 9px;
 }
 .footer-section{
-  display: flex;
-  flex-wrap: wrap;
+  @extend .dis-fl--dw;
   align-items: baseline;
 }
 .footer-section_item:not(:last-child){
@@ -47,10 +46,7 @@
   }
 
 .section-common_list{
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
+  @extend .dis-fl--dwaj;
   margin-left: -10px;
   margin-top: -30px;
 }
@@ -81,7 +77,8 @@
   border-radius: 50%;
   display: block;
   background-color: rgba(255, 255, 255, 0.1);
-  display: flex;  
+  // @extend .dis-fl--daj;  /*не працює*/
+  display: flex;
   align-items: center;
   justify-content: center;
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
