--- a/sass/layout/_ourteam.scss
+++ b/sass/layout/_ourteam.scss
@@ -24,9 +24,7 @@
   margin-bottom: 16px;
 }
 .ourteam-socital-list{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend .dis-fl--daj;
 }
 .ourteam-socital-item +.ourteam-socital-item{
   margin-left: 10px;
@@ -37,7 +35,8 @@
   border-radius: 50%;
   display: block;
   background-color: var(--primary-title-color);
-  display: flex;  
+  // @extend .dis-fl--daj; /*не працює*/
+    display: flex;
   align-items: center;
   justify-content: center;
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
