--- a/sass/layout/_whyus.scss
+++ b/sass/layout/_whyus.scss
@@ -1,12 +1,11 @@
 .whyus-container{
-  display: flex;
+  @extend .dis-fl--d;
 }
 .ourteam-list,
 .whyus-list,
 .wedoing-list,
 .clients-list{
-  display: flex;
-  flex-wrap: wrap;
+  @extend .dis-fl--dw;
   margin-left: -30px;
   margin-top: -30px;
 }
@@ -21,9 +20,7 @@
   height: 120px;
   background-color: var(--filter-button-color);
   border-radius: 4px;
-  display: flex;  
-  align-items: center;
-  justify-content: center;
+  @extend .dis-fl--daj;
   margin-bottom: 30px;
 }
 .whyus-pkt-item{
