--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,6 +1,7 @@
 .link{
   text-decoration: none;
-  font-family: inherit  
+  font-family: inherit;
+  font-family: inherit;
 }
 .list{
   list-style: none;
