--- a/sass/components/_flex.scss
+++ b/sass/components/_flex.scss
@@ -1,29 +1,12 @@
-.dis-fl--d{
+.dis-fl_d{
   display: flex;
 }
-.dis-fl--da{
-  display: flex;
+.dis-fl_a{
   align-items: center;
 }
-.dis-fl--daj{
-  display: flex;
-  align-items: center;
+.dis-fl_j{
   justify-content: center;
 }
-.dis-fl--dw{
-  display: flex;
+.dis-fl_w{
   flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-}
-.dis-fl--dwj{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.dis-fl--dwaj{
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
 }
