--- a/sass/layout/_whyus.scss
+++ b/sass/layout/_whyus.scss
@@ -1,33 +1,36 @@
-.whyus-container{
-  @extend .dis-fl--d;
+.whyus-container {
+  @extend .dis-fl_d;
 }
 .ourteam-list,
 .whyus-list,
 .wedoing-list,
-.clients-list{
-  @extend .dis-fl--dw;
+.clients-list {
+  @extend .dis-fl_d;
+  @extend .dis-fl_w;
   margin-left: -30px;
   margin-top: -30px;
 }
-.wedoing-item,
+.wedoing_item,
 .ourteam-item,
-.whyus-item{
+.whyus-item {
   flex-basis: calc(100% / 4 - 30px);
   margin-left: 30px;
   margin-top: 30px;
 }
-.whyus-item-pkt{
+.whyus-item-pkt {
   height: 120px;
   background-color: var(--filter-button-color);
   border-radius: 4px;
-  @extend .dis-fl--daj;
+  @extend .dis-fl_d;
+  @extend .dis-fl_a;
+  @extend .dis-fl_j;
   margin-bottom: 30px;
 }
-.whyus-pkt-item{
+.whyus-pkt-item {
   width: 70px;
-  height: 70px; 
+  height: 70px;
 }
-.whyus-item-header{
+.whyus-item-header {
   font-weight: 700;
   line-height: calc(16 / 14);
   letter-spacing: 0.03em;
@@ -35,7 +38,7 @@
   color: var(--secondary-title-color);
   margin-bottom: 10px;
 }
-.whyus-item-text{
-  line-height: 1.71;   /* or 171% */
+.whyus-item-text {
+  line-height: 1.71; /* or 171% */
   color: var(--primary-text-color);
 }
