--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import './utils/!main';
-@import './base/!base';
-@import './components/!main';
-@import './layout/!main';
+@import './utils/utils';
+@import './base/base';
+@import './components/components';
+@import './layout/layout';
