--- a/css/main.css
+++ b/css/main.css
@@ -3,19 +3,19 @@
 :root {
   --primary-title-color: #ffffff;
   --third-text-color: #ffffff;
-  --background-card: #ffffff;
+  --background-card: #FFFFFF;
   --secondary-title-color: #212121;
   --secondary-text-color: #212121;
   --primary-text-color: #757575;
   --accent-color: #2196f3;
-  --filter-button-color: #f5f4fa;
-  --border-color: #ececec;
-  --hero-grount: #2f303a;
-  --futer-grount: #2f303a;
-  --hero-button: #188ce8;
-  --portofolio-card-border: #eeeeee;
-  --hero-bg: #c4c4c4;
-  --clients-color: #afb1b8;
+  --filter-button-color: #F5F4FA;
+  --border-color: #ECECEC;
+  --hero-grount: #2F303A;
+  --futer-grount: #2F303A;
+  --hero-button: #188CE8;
+  --portofolio-card-border:#EEEEEE;
+  --hero-bg:#C4C4C4;
+  --clients-color: #AFB1B8;
 }
 
 .visually-hidden {
@@ -27,8 +27,6 @@
   overflow: hidden;
   border: 0;
   clip: rect(0, 0, 0, 0);
-}
-.address {
 }
 
 /*'./base/...';*/
@@ -55,14 +53,6 @@ button {
   border-width: 0;
 }
 
-body {
-  font-family: "Roboto", sans-serif;
-  font-weight: normal;
-  font-size: 14px;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-}
-
 .link {
   text-decoration: none;
   font-family: inherit;
@@ -71,6 +61,14 @@ body {
 
 .list {
   list-style: none;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: normal;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
 }
 
 /*'./components/...';*/
@@ -84,6 +82,15 @@ body {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+}
+
+.section_title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: calc(42 / 36);
+  text-align: center;
+  color: var(--secondary-title-color);
+  margin-bottom: 50px;
 }
 
 .btn {
@@ -102,12 +109,10 @@ body {
 .btn_hero {
   color: var(--third-text-color);
   background-color: var(--accent-color);
-  transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn_hero:hover,
-.btn_hero:focus {
+.btn_hero:hover, .btn_hero:focus {
   color: var(--third-text-color);
   background-color: var(--hero-button);
 }
@@ -128,9 +133,7 @@ body {
 .btn-filtr_color {
   color: var(--secondary-text-color);
   background: var(--filter-button-color);
-  transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 240ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1), background-color 240ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* не виконано крізь & бо не працює клас carent-btn*/
@@ -139,8 +142,7 @@ body {
 .carrent-btn {
   color: var(--third-text-color);
   background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* кнопка закриття модального вікна*/
@@ -161,8 +163,7 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-close:hover,
-.btn-close:focus {
+.btn-close:hover, .btn-close:focus {
   fill: var(--accent-color);
 }
 
@@ -181,79 +182,42 @@ body {
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.logo:hover,
-.logo:focus {
+.logo:hover, .logo:focus {
   color: var(--accent-color);
 }
 
-.logo_color--dark {
+.logo_indent--right {
+  margin-right: 93px;
+}
+
+.logo--dark {
   color: var(--secondary-text-color);
 }
 
-.logo_color--light {
+.logo--light {
   color: var(--primary-title-color);
 }
 
-.title-h2 {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: calc(42 / 36);
-  text-align: center;
-  color: var(--secondary-title-color);
-}
-
-.dis-fl--d,
-.whyus-container {
-  display: flex;
-}
-
-.dis-fl--da,
-.header-kontacts-flex,
-.header-link-item,
-.hero-container {
-  display: flex;
-  align-items: center;
-}
-
-.dis-fl--daj,
-.btn-close,
-.whyus-item-pkt,
-.ourteam-socital-list,
-.clients-link,
-.backdrop,
-.check-text,
-.check-text span {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.dis-fl--dw,
-.ourteam-list,
+.dis-fl_d, .btn-close, .header_kontacts-flex, .header_link-item, .hero-container, .whyus-container, .ourteam-list,
 .whyus-list,
 .wedoing-list,
-.clients-list,
-.footer-section,
-.portofolio-list {
+.clients-list, .whyus-item-pkt, .ourteam-socital-list, .clients-link, .footer-section, .section-common_list, .filtr-list, .portofolio_list, .backdrop, .check-text, .check-text span {
   display: flex;
-  flex-wrap: wrap;
+}
+
+.dis-fl_a, .btn-close, .header_kontacts-flex, .header_link-item, .hero-container, .whyus-item-pkt, .ourteam-socital-list, .clients-link, .section-common_list, .backdrop, .check-text, .check-text span {
   align-items: center;
+}
+
+.dis-fl_j, .btn-close, .whyus-item-pkt, .ourteam-socital-list, .clients-link, .section-common_list, .filtr-list, .backdrop, .check-text, .check-text span {
   justify-content: center;
 }
 
-.dis-fl--dwj,
-.filtr-list {
-  display: flex;
+.dis-fl_w, .ourteam-list,
+.whyus-list,
+.wedoing-list,
+.clients-list, .footer-section, .section-common_list, .filtr-list, .portofolio_list {
   flex-wrap: wrap;
-  justify-content: center;
-}
-
-.dis-fl--dwaj,
-.section-common_list {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
 }
 
 /*'./layout/...';*/
@@ -261,15 +225,11 @@ body {
   border-bottom: 1px solid var(--border-color);
 }
 
-.logo_indent--right {
-  margin-right: 93px;
-}
-
-.header-kontacts-flex {
+.header_kontacts-flex {
   margin-left: auto;
 }
 
-.header-link {
+.header_link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -281,9 +241,8 @@ body {
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-link:hover,
-.header-link:focus,
-.header-link .current {
+.header_link:hover, .header_link:focus,
+.header_link .current {
   color: var(--accent-color);
 }
 
@@ -298,15 +257,15 @@ body {
   bottom: -1px;
 }
 
-.header-item:not(:last-child) {
+.header_item:not(:last-child) {
   margin-right: 50px;
 }
 
-.header-kontacts-item {
+.header_kontacts-item {
   color: var(--primary-text-color);
 }
 
-.header-kontacts-sep:not(:last-child) {
+.header_kontacts-sep:not(:last-child) {
   margin-right: 50px;
   /* отступ между мылом и телефоном без последнего ребенка */
 }
@@ -317,12 +276,12 @@ body {
   transition: fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-link-item:hover .icon,
-.header-link-item:focus .icon {
+.header_link-item:hover .icon,
+.header_link-item:focus .icon {
   fill: var(--accent-color);
 }
 
-.header-link-item {
+.header_link-item {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -330,19 +289,13 @@ body {
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-link-item:hover,
-.header-link-item:focus {
+.header_link-item:hover, .header_link-item:focus {
   color: var(--accent-color);
 }
 
 .hero {
   background-color: var(--hero-bg);
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/hero-jpeg.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-jpeg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -375,7 +328,7 @@ body {
   margin-top: -30px;
 }
 
-.wedoing-item,
+.wedoing_item,
 .ourteam-item,
 .whyus-item {
   flex-basis: calc(100% / 4 - 30px);
@@ -414,15 +367,11 @@ body {
   padding-top: 0px;
 }
 
-.title-h2_indent--bottom {
-  margin-bottom: 50px;
-}
-
-.wedoing-item {
+.wedoing_item {
   position: relative;
 }
 
-.wedoing-text {
+.wedoing_text {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -446,8 +395,7 @@ body {
 
 .ourteam-card {
   background: var(--background-card);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   display: block;
   padding-bottom: 30px;
@@ -487,8 +435,7 @@ body {
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.ourteam-socital-link:hover,
-.ourteam-socital-link:focus {
+.ourteam-socital-link:hover, .ourteam-socital-link:focus {
   background-color: var(--accent-color);
 }
 
@@ -516,12 +463,10 @@ body {
   border: 1px solid var(--clients-color);
   border-radius: 4px;
   fill: var(--clients-color);
-  transition: border 240ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 240ms cubic-bezier(0.4, 0, 0.2, 1), fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients-link:hover, .clients-link:focus {
   border: 1px solid var(--hero-button);
   fill: var(--hero-button);
 }
@@ -548,8 +493,7 @@ body {
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address:hover,
-.address:focus {
+.address:hover, .address:focus {
   color: var(--accent-color);
 }
 
@@ -560,8 +504,7 @@ body {
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact:hover,
-.contact:focus {
+.contact:hover, .contact:focus {
   color: var(--accent-color);
 }
 
@@ -619,14 +562,14 @@ body {
   border-radius: 50%;
   display: block;
   background-color: rgba(255, 255, 255, 0.1);
+  /*не працює*/
   display: flex;
   align-items: center;
   justify-content: center;
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.section-common_link:hover,
-.section-common_link:focus {
+.section-common_link:hover, .section-common_link:focus {
   background-color: var(--accent-color);
 }
 
@@ -644,7 +587,7 @@ body {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: #FFFFFF;
   padding-bottom: 20px;
 }
 
@@ -669,8 +612,7 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-mailing_box:hover,
-.footer-mailing_box:focus {
+.footer-mailing_box:hover, .footer-mailing_box:focus {
   border: 1px solid var(--accent-color);
 }
 
@@ -694,8 +636,7 @@ body {
   /*Шютка*/
 }
 
-.footer-mailing_icon:hover,
-.footer-mailing_icon:focus {
+.footer-mailing_icon:hover, .footer-mailing_icon:focus {
   transform: rotate(25deg) translateX(-45%);
 }
 
@@ -707,12 +648,12 @@ body {
   margin-right: 8px;
 }
 
-.portofolio-list {
+.portofolio_list {
   margin-left: -30px;
   margin-top: -30px;
 }
 
-.portofolio-item {
+.portofolio_item {
   flex-basis: calc(100% / 3 - 30px);
   box-sizing: border-box;
   margin-left: 30px;
@@ -723,15 +664,13 @@ body {
   transition: box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portofolio-link:hover,
-.portofolio-link:focus {
+.portofolio-link:hover, .portofolio-link:focus {
   display: block;
   outline: none;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portofolio-item-title {
+.portofolio_item-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -741,14 +680,14 @@ body {
   margin-bottom: 4px;
 }
 
-.portofolio-item-text {
+.portofolio_item-text {
   font-size: 16px;
   line-height: 1.87;
   /* identical to box height, or 187% */
   color: var(--primary-text-color);
 }
 
-.portofolio-item-card {
+.portofolio_item-card {
   padding-left: 24px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -789,8 +728,7 @@ body {
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
   top: 0;
-  transition: opacity 240ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 240ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 240ms cubic-bezier(0.4, 0, 0.2, 1), visibility 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -808,14 +746,12 @@ body {
   width: 528px;
   min-height: 581px;
   background-color: var(--primary-title-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   position: relative;
   opacity: 1;
   transform: scale(1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
 }
 
@@ -922,8 +858,7 @@ body {
   border: 2px solid var(--futer-grount);
   border-radius: 3px;
   margin-right: 8px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-checkbox:hover + .check-text span,
