--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -5,14 +5,17 @@
   line-height: calc(31 / 26);
   color: var(--accent-color);
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus{
-    color: var(--accent-color);}
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
-
-.logo_color--dark{
+.logo_indent--right{
+  margin-right: 93px;
+}
+.logo--dark {
   color: var(--secondary-text-color);
 }
-.logo_color--light{
-  color:var(--primary-title-color);
+.logo--light {
+  color: var(--primary-title-color);
 }
