--- a/sass/layout/_filtr.scss
+++ b/sass/layout/_filtr.scss
@@ -1,5 +1,7 @@
 .filtr-list{
-  @extend .dis-fl--dwj;
+  @extend .dis-fl_d;
+  @extend .dis-fl_w;
+  @extend .dis-fl_j;
   margin-bottom: 50px;
 }
 .filtr-item:not(:last-child){
