--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,16 +1,14 @@
-.header{
+.header {
   border-bottom: 1px solid var(--border-color);
 }
 
-.logo_indent--right{
-  margin-right: 93px;
-}
-.header-kontacts-flex{
-  @extend .dis-fl--da;
+.header_kontacts-flex {
+  @extend .dis-fl_d;
+  @extend .dis-fl_a;
   margin-left: auto;
 }
 
-.header-link{
+.header_link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -23,11 +21,12 @@
 
   &:hover,
   &:focus,
-  .current{
-  color: var(--accent-color);}
+  .current {
+    color: var(--accent-color);
+  }
 }
 
-.current::after{
+.current::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -37,13 +36,13 @@
   display: block;
   bottom: -1px;
 }
-.header-item:not(:last-child){
+.header_item:not(:last-child) {
   margin-right: 50px;
 }
-.header-kontacts-item{
+.header_kontacts-item {
   color: var(--primary-text-color);
 }
-.header-kontacts-sep:not(:last-child){
+.header_kontacts-sep:not(:last-child) {
   margin-right: 50px; /* отступ между мылом и телефоном без последнего ребенка */
 }
 .icon {
@@ -51,12 +50,14 @@
   fill: var(--primary-text-color);
   transition: fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.header-link-item:hover &,
-.header-link-item:focus &{
-  fill: var(--accent-color);}  
+  .header_link-item:hover &,
+  .header_link-item:focus & {
+    fill: var(--accent-color);
+  }
 }
-.header-link-item{
-  @extend .dis-fl--da;
+.header_link-item {
+  @extend .dis-fl_d;
+  @extend .dis-fl_a;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -64,6 +65,7 @@
   transition: color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus{
-  color: var(--accent-color);}
+  &:focus {
+    color: var(--accent-color);
+  }
 }
