--- a/sass/layout/_ourteam.scss
+++ b/sass/layout/_ourteam.scss
@@ -24,7 +24,9 @@
   margin-bottom: 16px;
 }
 .ourteam-socital-list{
-  @extend .dis-fl--daj;
+  @extend .dis-fl_d;
+  @extend .dis-fl_a;
+  @extend .dis-fl_j;
 }
 .ourteam-socital-item +.ourteam-socital-item{
   margin-left: 10px;
@@ -36,7 +38,7 @@
   display: block;
   background-color: var(--primary-title-color);
   // @extend .dis-fl--daj; /*не працює*/
-    display: flex;
+  display: flex;
   align-items: center;
   justify-content: center;
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
