--- a/sass/layout/_portofolio.scss
+++ b/sass/layout/_portofolio.scss
@@ -1,54 +1,53 @@
-
-.portofolio-list{
-  @extend .dis-fl--dw;
+.portofolio_list {
+  @extend .dis-fl_d;
+  @extend .dis-fl_w;
   margin-left: -30px;
   margin-top: -30px;
 }
-.portofolio-item{
+.portofolio_item {
   flex-basis: calc(100% / 3 - 30px);
   box-sizing: border-box;
   margin-left: 30px;
-  margin-top: 30px;  
+  margin-top: 30px;
 }
-.portofolio-link{
+.portofolio-link {
   transition: box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover,
-    &:focus{
-  display: block;
-  outline: none;
-  box-shadow:     
-    0px 1px 1px rgba(0, 0, 0, 0.12),
-    0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);}
+  &:hover,
+  &:focus {
+    display: block;
+    outline: none;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
-.portofolio-item-title{
+.portofolio_item-title {
   font-weight: 700;
   font-size: 18px;
-  line-height: 2.00;/* identical to box height, or 200% */
+  line-height: 2; /* identical to box height, or 200% */
   letter-spacing: 0.06em;
   color: var(--secondary-title-color);
   margin-bottom: 4px;
 }
-.portofolio-item-text{
+.portofolio_item-text {
   font-size: 16px;
   line-height: 1.87; /* identical to box height, or 187% */
   color: var(--primary-text-color);
 }
-.portofolio-item-card{
+.portofolio_item-card {
   padding-left: 24px;
   padding-top: 20px;
-  padding-bottom: 20px;  
+  padding-bottom: 20px;
   border: 1px solid var(--portofolio-card-border);
-  border-top:  0px;
+  border-top: 0px;
   box-sizing: border-box;
 }
-.portofolio-top-wrappter{
-position: relative;
-overflow:hidden;
+.portofolio-top-wrappter {
+  position: relative;
+  overflow: hidden;
 }
-.porofolio-top-text{
+.porofolio-top-text {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
@@ -63,7 +62,8 @@ overflow:hidden;
   transform: translateY(100%);
   transition: transform 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    .portofolio-link:hover &,
-    .portofolio-link:focus &{
-      transform: translateY(0);}
+  .portofolio-link:hover &,
+  .portofolio-link:focus & {
+    transform: translateY(0);
+  }
 }
