--- a/sass/layout/_wedoing.scss
+++ b/sass/layout/_wedoing.scss
@@ -1,13 +1,10 @@
-.wedoing{
+.wedoing {
   padding-top: 0px;
 }
-.title-h2_indent--bottom{
-margin-bottom: 50px;
-} 
-.wedoing-item{
+.wedoing_item {
   position: relative;
 }
-.wedoing-text{
+.wedoing_text {
   position: absolute;
   bottom: 0;
   width: 100%;
