--- a/css/main.css
+++ b/css/main.css
@@ -198,25 +198,25 @@ body {
   color: var(--primary-title-color);
 }
 
-.dis-fl_d, .btn-close, .header_kontacts-flex, .header_link-item, .hero-container, .whyus-container, .ourteam-list,
-.whyus-list,
-.wedoing-list,
-.clients-list, .whyus-item-pkt, .ourteam-socital-list, .clients-link, .footer-section, .section-common_list, .filtr-list, .portofolio_list, .backdrop, .check-text, .check-text span {
+.dis-fl_d, .btn-close, .header_kontacts-flex, .header_link-item, .hero_container, .whyus_container, .ourteam_list,
+.whyus_list,
+.wedoing_list,
+.clients_list, .whyus_item-pkt, .ourteam-socital-list, .clients_link, .footer-section, .section-common_list, .filtr_list, .portofolio_list, .backdrop, .check_text, .check_text span {
   display: flex;
 }
 
-.dis-fl_a, .btn-close, .header_kontacts-flex, .header_link-item, .hero-container, .whyus-item-pkt, .ourteam-socital-list, .clients-link, .section-common_list, .backdrop, .check-text, .check-text span {
+.dis-fl_a, .btn-close, .header_kontacts-flex, .header_link-item, .hero_container, .whyus_item-pkt, .ourteam-socital-list, .clients_link, .section-common_list, .backdrop, .check_text, .check_text span {
   align-items: center;
 }
 
-.dis-fl_j, .btn-close, .whyus-item-pkt, .ourteam-socital-list, .clients-link, .section-common_list, .filtr-list, .backdrop, .check-text, .check-text span {
+.dis-fl_j, .btn-close, .whyus_item-pkt, .ourteam-socital-list, .clients_link, .section-common_list, .filtr_list, .backdrop, .check_text, .check_text span {
   justify-content: center;
 }
 
-.dis-fl_w, .ourteam-list,
-.whyus-list,
-.wedoing-list,
-.clients-list, .footer-section, .section-common_list, .filtr-list, .portofolio_list {
+.dis-fl_w, .ourteam_list,
+.whyus_list,
+.wedoing_list,
+.clients_list, .footer-section, .section-common_list, .filtr_list, .portofolio_list {
   flex-wrap: wrap;
 }
 
@@ -303,11 +303,11 @@ body {
   padding-bottom: 200px;
 }
 
-.hero-container {
+.hero_container {
   flex-direction: column;
 }
 
-.hero-title {
+.hero_title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -320,35 +320,35 @@ body {
   margin-bottom: 30px;
 }
 
-.ourteam-list,
-.whyus-list,
-.wedoing-list,
-.clients-list {
+.ourteam_list,
+.whyus_list,
+.wedoing_list,
+.clients_list {
   margin-left: -30px;
   margin-top: -30px;
 }
 
 .wedoing_item,
-.ourteam-item,
-.whyus-item {
+.ourteam_item,
+.whyus_item {
   flex-basis: calc(100% / 4 - 30px);
   margin-left: 30px;
   margin-top: 30px;
 }
 
-.whyus-item-pkt {
+.whyus_item-pkt {
   height: 120px;
   background-color: var(--filter-button-color);
   border-radius: 4px;
   margin-bottom: 30px;
 }
 
-.whyus-pkt-item {
+.whyus_pkt-item {
   width: 70px;
   height: 70px;
 }
 
-.whyus-item-header {
+.whyus_item-header {
   font-weight: 700;
   line-height: calc(16 / 14);
   letter-spacing: 0.03em;
@@ -357,7 +357,7 @@ body {
   margin-bottom: 10px;
 }
 
-.whyus-item-text {
+.whyus_item-text {
   line-height: 1.71;
   /* or 171% */
   color: var(--primary-text-color);
@@ -402,7 +402,7 @@ body {
   /* новый отсттуп - при любом количестве пикт*/
 }
 
-.ourteam-item-title {
+.ourteam_item-title {
   font-weight: 500;
   font-size: 16px;
   line-height: calc(19 / 16);
@@ -412,7 +412,7 @@ body {
   margin-bottom: 10px;
 }
 
-.ourteam-item-text {
+.ourteam_item-text {
   font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
@@ -451,13 +451,13 @@ body {
   fill: var(--primary-title-color);
 }
 
-.clients-item {
+.clients_item {
   flex-basis: calc(100% / 6 - 30px);
   margin-left: 30px;
   margin-top: 30px;
 }
 
-.clients-link {
+.clients_link {
   width: 170px;
   height: 92px;
   border: 1px solid var(--clients-color);
@@ -466,12 +466,12 @@ body {
   transition: border 240ms cubic-bezier(0.4, 0, 0.2, 1), fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-link:hover, .clients-link:focus {
+.clients_link:hover, .clients_link:focus {
   border: 1px solid var(--hero-button);
   fill: var(--hero-button);
 }
 
-.clients-icon {
+.clients_icon {
   width: 106px;
   height: 60px;
 }
@@ -482,7 +482,7 @@ body {
   padding-bottom: 60px;
 }
 
-.footer-contact {
+.footer_contact {
   font-style: inherit;
 }
 
@@ -513,7 +513,7 @@ body {
   margin-bottom: 20px;
 }
 
-.footer-item:not(:last-child) {
+.footer_item:not(:last-child) {
   display: block;
   margin-bottom: 9px;
 }
@@ -587,8 +587,8 @@ body {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #FFFFFF;
-  padding-bottom: 20px;
+  color: #ffffff;
+  margin-bottom: 20px;
 }
 
 .footer-mailing_form {
@@ -640,7 +640,7 @@ body {
   transform: rotate(25deg) translateX(-45%);
 }
 
-.filtr-list {
+.filtr_list {
   margin-bottom: 50px;
 }
 
@@ -660,11 +660,11 @@ body {
   margin-top: 30px;
 }
 
-.portofolio-link {
+.portofolio_link {
   transition: box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portofolio-link:hover, .portofolio-link:focus {
+.portofolio_link:hover, .portofolio_link:focus {
   display: block;
   outline: none;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -696,12 +696,12 @@ body {
   box-sizing: border-box;
 }
 
-.portofolio-top-wrappter {
+.portofolio_top-wrappter {
   position: relative;
   overflow: hidden;
 }
 
-.porofolio-top-text {
+.porofolio_top-text {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
@@ -717,8 +717,8 @@ body {
   transition: transform 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portofolio-link:hover .porofolio-top-text,
-.portofolio-link:focus .porofolio-top-text {
+.portofolio_link:hover .porofolio_top-text,
+.portofolio_link:focus .porofolio_top-text {
   transform: translateY(0);
 }
 
@@ -755,7 +755,7 @@ body {
   padding: 40px;
 }
 
-.modal-title {
+.modal_title {
   font-size: 20px;
   line-height: calc(23 / 20);
   font-weight: 700;
@@ -765,11 +765,11 @@ body {
   color: #212121;
 }
 
-.modal-field {
+.modal_field {
   margin-bottom: 10px;
 }
 
-.input-label {
+.modal_input-label {
   font-size: 12px;
   line-height: calc(14 / 12);
   letter-spacing: 0.01em;
@@ -778,12 +778,12 @@ body {
   margin-bottom: 4px;
 }
 
-.input-wrapper {
+.modal_input-wrapper {
   display: block;
   position: relative;
 }
 
-.modal-input {
+.modal_input {
   width: 100%;
   height: 45px;
   border-radius: 4px;
@@ -796,17 +796,17 @@ body {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:hover,
-.modal-input:focus {
+.modal_input:hover,
+.modal_input:focus {
   border: 1px solid var(--accent-color);
 }
 
-.modal-input:hover + .input-icon,
-.modal-input:focus + .input-icon {
+.modal_input:hover + .input_icon,
+.modal_input:focus + .input_icon {
   fill: var(--accent-color);
 }
 
-.input-icon {
+.input_icon {
   width: 18px;
   height: 18px;
   position: absolute;
@@ -816,7 +816,7 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-user-commit {
+.modal_user-commit {
   width: 100%;
   height: 120px;
   border-radius: 4px;
@@ -830,21 +830,21 @@ body {
   color: var(--primary-text-color);
 }
 
-.modal-user-commit::placeholder {
+.modal_user-commit::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-user-commit:hover,
-.modal-user-commit:focus {
+.modal_user-commit:hover,
+.modal_user-commit:focus {
   border: 1px solid var(--accent-color);
 }
 
-.modal-btn {
+.modal_btn {
   display: block;
   margin: 0 auto;
 }
 
-.check-text {
+.check_text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -852,7 +852,7 @@ body {
   margin-bottom: 30px;
 }
 
-.check-text span {
+.check_text span {
   width: 16px;
   height: 15px;
   border: 2px solid var(--futer-grount);
@@ -861,12 +861,12 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-checkbox:hover + .check-text span,
-.modal-checkbox:focus + .check-text span {
+.modal_checkbox:hover + .check_text span,
+.modal_checkbox:focus + .check_text span {
   border: 2px solid var(--accent-color);
 }
 
-.modal-checkbox:checked + .check-text span {
+.modal_checkbox:checked + .check_text span {
   background-color: var(--accent-color);
   border: 2px solid var(--accent-color);
 }
