--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,9 +1,9 @@
-.clients-item{
+.clients_item {
   flex-basis: calc(100% / 6 - 30px);
   margin-left: 30px;
   margin-top: 30px;
 }
-.clients-link{
+.clients_link {
   @extend .dis-fl_d;
   @extend .dis-fl_a;
   @extend .dis-fl_j;
@@ -11,16 +11,17 @@
   height: 92px;
   border: 1px solid var(--clients-color);
   border-radius: 4px;
-  fill: var(--clients-color); 
-  transition: border 240ms cubic-bezier(0.4, 0, 0.2, 1), 
-              fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: var(--clients-color);
+  transition: border 240ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus{
-  border: 1px solid var(--hero-button);
-  fill: var(--hero-button);}
+  &:focus {
+    border: 1px solid var(--hero-button);
+    fill: var(--hero-button);
+  }
 }
-.clients-icon{
+.clients_icon {
   width: 106px;
   height: 60px;
 }
