--- a/sass/layout/_filtr.scss
+++ b/sass/layout/_filtr.scss
@@ -1,9 +1,9 @@
-.filtr-list{
+.filtr_list {
   @extend .dis-fl_d;
   @extend .dis-fl_w;
   @extend .dis-fl_j;
   margin-bottom: 50px;
 }
-.filtr-item:not(:last-child){
+.filtr-item:not(:last-child) {
   margin-right: 8px;
 }
