--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,25 +1,26 @@
-.hero{
+.hero {
   background-color: var(--hero-bg);
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)), 
-      url(../images/hero-jpeg.jpg);
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero-jpeg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   padding-top: 200px;
   padding-bottom: 200px;
 }
-.hero-container{
+.hero_container {
   @extend .dis-fl_d;
   @extend .dis-fl_a;
   flex-direction: column;
 }
-.hero-title{
+.hero_title {
   font-weight: 900;
   font-size: 44px;
-  line-height: 1.36;  /* or 136% */
+  line-height: 1.36; /* or 136% */
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
