--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -1,4 +1,4 @@
-.backdrop{
+.backdrop {
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -9,35 +9,32 @@
   @extend .dis-fl_j;
 
   transition: opacity 240ms cubic-bezier(0.4, 0, 0.2, 1),
-            visibility 240ms cubic-bezier(0.4, 0, 0.2, 1);
+    visibility 240ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.backdrop.is-hidden{
+.backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
 }
-.backdrop.is-hidden
-.modal{
+.backdrop.is-hidden .modal {
   opacity: 0;
   transform: scale(0);
-  }
-.modal{
+}
+.modal {
   width: 528px;
   min-height: 581px;
   background-color: var(--primary-title-color);
-  box-shadow: 
-    0px 1px 3px rgba(0, 0, 0, 0.12), 
-    0px 1px 1px rgba(0, 0, 0, 0.14), 
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   position: relative;
   opacity: 1;
   transform: scale(1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-            transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
 }
-.modal-title{
+.modal_title {
   font-size: 20px;
   line-height: calc(23 / 20);
   font-weight: 700;
@@ -46,10 +43,10 @@
   letter-spacing: 0.03em;
   color: #212121;
 }
-.modal-field{
+.modal_field {
   margin-bottom: 10px;
 }
-.input-label{
+.modal_input-label {
   font-size: 12px;
   line-height: calc(14 / 12);
   letter-spacing: 0.01em;
@@ -57,11 +54,11 @@
   display: block;
   margin-bottom: 4px;
 }
-.input-wrapper{
+.modal_input-wrapper {
   display: block;
   position: relative;
 }
-.modal-input {
+.modal_input {
   width: 100%;
   height: 45px;
   border-radius: 4px;
@@ -73,16 +70,16 @@
   color: var(--primary-text-color);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:hover,
-.modal-input:focus {
+.modal_input:hover,
+.modal_input:focus {
   border: 1px solid var(--accent-color);
 }
-.modal-input:hover + .input-icon,
-.modal-input:focus + .input-icon{
+.modal_input:hover + .input_icon,
+.modal_input:focus + .input_icon {
   fill: var(--accent-color);
 }
 
-.input-icon{
+.input_icon {
   width: 18px;
   height: 18px;
   position: absolute;
@@ -92,7 +89,7 @@
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-user-commit{
+.modal_user-commit {
   width: 100%;
   height: 120px;
   border-radius: 4px;
@@ -103,21 +100,21 @@
   resize: none;
   outline: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  color: var(--primary-text-color)
+  color: var(--primary-text-color);
 }
-.modal-user-commit::placeholder{
+.modal_user-commit::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-.modal-user-commit:hover,
-.modal-user-commit:focus {
+.modal_user-commit:hover,
+.modal_user-commit:focus {
   border: 1px solid var(--accent-color);
 }
 
-.modal-btn{
+.modal_btn {
   display: block;
   margin: 0 auto;
 }
-.check-text{
+.check_text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -127,7 +124,7 @@
   @extend .dis-fl_j;
   margin-bottom: 30px;
 }
-.check-text span{
+.check_text span {
   width: 16px;
   height: 15px;
   border: 2px solid var(--futer-grount);
@@ -136,14 +133,14 @@
   @extend .dis-fl_d;
   @extend .dis-fl_a;
   @extend .dis-fl_j;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-                        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-checkbox:hover +.check-text span,
-.modal-checkbox:focus +.check-text span{
+.modal_checkbox:hover + .check_text span,
+.modal_checkbox:focus + .check_text span {
   border: 2px solid var(--accent-color);
 }
-.modal-checkbox:checked +.check-text span{
+.modal_checkbox:checked + .check_text span {
   background-color: var(--accent-color);
   border: 2px solid var(--accent-color);
 }
