--- a/sass/layout/_ourteam.scss
+++ b/sass/layout/_ourteam.scss
@@ -1,14 +1,15 @@
-.ourteam{
+.ourteam {
   background: var(--filter-button-color);
 }
-.ourteam-card{
+.ourteam-card {
   background: var(--background-card);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  display: block; 
-  padding-bottom: 30px;/* новый отсттуп - при любом количестве пикт*/
+  display: block;
+  padding-bottom: 30px; /* новый отсттуп - при любом количестве пикт*/
 }
-.ourteam-item-title{
+.ourteam_item-title {
   font-weight: 500;
   font-size: 16px;
   line-height: calc(19 / 16);
@@ -17,22 +18,22 @@
   margin-top: 30px;
   margin-bottom: 10px;
 }
-.ourteam-item-text{
+.ourteam_item-text {
   font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
   margin-bottom: 16px;
 }
-.ourteam-socital-list{
+.ourteam-socital-list {
   @extend .dis-fl_d;
   @extend .dis-fl_a;
   @extend .dis-fl_j;
 }
-.ourteam-socital-item +.ourteam-socital-item{
+.ourteam-socital-item + .ourteam-socital-item {
   margin-left: 10px;
 }
-.ourteam-socital-link{
-  width: 44px; 
+.ourteam-socital-link {
+  width: 44px;
   height: 44px;
   border-radius: 50%;
   display: block;
@@ -43,17 +44,19 @@
   justify-content: center;
   transition: background-color 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover,
-    &:focus{
-  background-color: var(--accent-color);}
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 }
-.socital-link-pkt{
-fill: var(--clients-color);
-width: 20px;
-height: 20px;
-transition: fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
+.socital-link-pkt {
+  fill: var(--clients-color);
+  width: 20px;
+  height: 20px;
+  transition: fill 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.ourteam-socital-link:hover &,
-.ourteam-socital-link:focus &{
-  fill: var(--primary-title-color);}
+  .ourteam-socital-link:hover &,
+  .ourteam-socital-link:focus & {
+    fill: var(--primary-title-color);
+  }
 }
