--- a/sass/layout/_portofolio.scss
+++ b/sass/layout/_portofolio.scss
@@ -10,7 +10,7 @@
   margin-left: 30px;
   margin-top: 30px;
 }
-.portofolio-link {
+.portofolio_link {
   transition: box-shadow 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
@@ -43,11 +43,11 @@
   border-top: 0px;
   box-sizing: border-box;
 }
-.portofolio-top-wrappter {
+.portofolio_top-wrappter {
   position: relative;
   overflow: hidden;
 }
-.porofolio-top-text {
+.porofolio_top-text {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
@@ -62,8 +62,8 @@
   transform: translateY(100%);
   transition: transform 240ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .portofolio-link:hover &,
-  .portofolio-link:focus & {
+  .portofolio_link:hover &,
+  .portofolio_link:focus & {
     transform: translateY(0);
   }
 }
